--- a/src/NavBar-Banner/header.css
+++ b/src/NavBar-Banner/header.css
@@ -1,6 +1,8 @@
 .active{
     color: black;
-    text-decoration: underline;
     font-weight: 500;
     list-style: none;
+    padding: 8px 17px;
+    border-radius: 3px;
+    background-color: pink;
 }
